--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,4 @@ before_script:
   - composer self-update
   - composer install --prefer-source --no-interaction --dev
  
-<?php
-script: phpunit
+script: phpunit --configuration phpunit.xml
