--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "version": "1.0.0",
     "require": {
-        "php": ">=5.4",
+        "php": ">=5.4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "4.8.*"
