--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "WebDevJL/FrameworkMvc",
+    "name": "webdevjl/framework-mvc",
     "description": "The EasyMvc framework to be used to build MVC websites",
     "license": "MIT",
     "keywords": ["webdevjl", "web", "dev", "jl", "easymvc"],
