--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
             "email": "contact@jeremielitzler.net"
         }
     ],
-    "version": "1.0.1",
+    "version": "v1.0.0-alpha.3",
     "require": {
         "php": ">=5.4.0"
     },
