--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "php": ">=5.4.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.8.*"
+        "phpunit/phpunit": "4.8.*",
+        "puzzlout/exceptions": "dev-master",
+        "puzzlout/objects": "dev-master"
     },
     "autoload": {
         "psr-4": {
