--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_script:
   - composer install --prefer-source --no-interaction --dev
 
 script: 
-  - phpunit --configuration phpunit.xml
+  - phpunit --configuration phpunit.xml --coverage-clover=coverage.xml
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
